[package]
name = "gelato"
version = "0.1.0"
edition = "2021"

[dependencies]
cranelift-codegen = "0.93.0"
cranelift-frontend = "0.93.0"
cranelift-module = "0.93.0"
cranelift-object = "0.93.0"
target-lexicon = "0.12.6"
variant_count = "1.1.0"
oxcart = { git = "https://github.com/apribadi/oxcart.git" }

[dev-dependencies]
expect-test = "1.4.0"
